testsuite/tests/grammar/invalid_unparser/toplevel-pick.lkt
grammar foo_grammar {
    @main_rule main_rule <- ("example" Root(item))
    item <- or(Identifier(@identifier) | Number(@number))
}
